Rename functions according to the product name

--- a/sources/scc/docspace-components.yaml
+++ b/sources/scc/docspace-components.yaml
@@ -1,7 +1,7 @@
 kind: SecurityContextConstraints
 apiVersion: v1
 metadata:
-  name: scc-app-components
+  name: scc-docspace-components
 allowPrivilegedContainer: false
 runAsUser:
   type: MustRunAsRange
