--- a/templates/secrets/broker-password.yaml
+++ b/templates/secrets/broker-password.yaml
@@ -1,17 +1,17 @@
-{{- if eq (include "app.broker.createSecret" .) "true" }}
+{{- if eq (include "docspace.broker.createSecret" .) "true" }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-broker
-  namespace: {{ include "app.namespace" . | quote }}
+  namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "3"
 type: Opaque
 stringData:
-  {{ .Values.connections.brokerSecretKeyName }}: {{ include "app.broker.password" . | quote }}
+  {{ .Values.connections.brokerSecretKeyName }}: {{ include "docspace.broker.password" . | quote }}
 {{- end }}
