--- a/templates/secrets/jwt.yaml
+++ b/templates/secrets/jwt.yaml
@@ -3,10 +3,10 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-jwt
-  namespace: {{ include "app.namespace" . | quote }}
+  namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
 type: Opaque
 stringData:
