--- a/templates/secrets/redis-password.yaml
+++ b/templates/secrets/redis-password.yaml
@@ -1,14 +1,14 @@
-{{- if eq (include "app.redis.createSecret" .) "true" }}
+{{- if eq (include "docspace.redis.createSecret" .) "true" }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-redis
-  namespace: {{ include "app.namespace" . | quote }}
+  namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
 type: Opaque
 stringData:
-  {{ .Values.connections.redisSecretKeyName }}: {{ include "app.redis.password" . | quote }}
+  {{ .Values.connections.redisSecretKeyName }}: {{ include "docspace.redis.password" . | quote }}
 {{- end }}
