--- a/templates/configmaps/docspace.yaml
+++ b/templates/configmaps/docspace.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: app-all
-  namespace: {{ include "app.namespace" . | quote }}
+  name: docspace
+  namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
@@ -20,7 +20,7 @@ data:
   ELK_HOST: {{ .Values.connections.elkHost }}
   ELK_PORT: {{ .Values.connections.elkPort | quote }}
   ELK_THREADS: {{ .Values.connections.elkThreads | quote }}
-  PROXY_HOST: {{ template "app.svc.proxy.name" . }}
+  PROXY_HOST: {{ template "docspace.svc.proxy.name" . }}
   SOCKET_HOST: {{ .Values.connections.socketHost }}
   REDIS_HOST: {{ .Values.connections.redisHost }}
   REDIS_PORT: {{ .Values.connections.redisPort | quote }}
@@ -29,7 +29,7 @@ data:
   RABBIT_PORT: {{ .Values.connections.brokerPort | quote }}
   RABBIT_VIRTUAL_HOST: {{ .Values.connections.brokerVhost | quote }}
   RABBIT_USER_NAME: {{ .Values.connections.brokerUser }}
-  APP_URL_PORTAL: {{ include "app.url.portal" . | quote }}
+  APP_URL_PORTAL: {{ include "docspace.url.portal" . | quote }}
   APP_CORE_BASE_DOMAIN: {{ .Values.connections.appCoreBaseDomain | quote }}
   DOCUMENT_SERVER_URL_PUBLIC: {{ .Values.connections.documentServerUrlPublic | quote }}
   DOCUMENT_SERVER_URL_INTERNAL: {{ .Values.connections.documentServerUrlInternal | quote }}
