--- a/templates/deployments/proxy.yaml
+++ b/templates/deployments/proxy.yaml
@@ -2,11 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: proxy
-  namespace: {{ include "app.namespace" . | quote }}
+  namespace: {{ include "docspace.namespace" . | quote }}
   labels:
     app: proxy
     {{- if .Values.commonLabels }}
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
   replicas: {{ .Values.proxy.replicaCount }}
@@ -14,7 +14,7 @@ spec:
     matchLabels:
       app: proxy
       {{- if .Values.commonLabels }}
-      {{- include "app.labels.commonLabels" . | trim | nindent 6 }}
+      {{- include "docspace.labels.commonLabels" . | trim | nindent 6 }}
       {{- end }}
   {{- if .Values.proxy.updateStrategy }}
   strategy: {{- toYaml .Values.proxy.updateStrategy | nindent 4 }}
@@ -24,7 +24,7 @@ spec:
       labels:
         app: proxy
         {{- if .Values.commonLabels }}
-        {{- include "app.labels.commonLabels" . | trim | nindent 8 }}
+        {{- include "docspace.labels.commonLabels" . | trim | nindent 8 }}
         {{- end }}
       {{- if .Values.podAnnotations }}
       annotations:
@@ -33,7 +33,7 @@ spec:
         {{- end }}
       {{- end }}
     spec:
-      serviceAccountName: {{ include "app.serviceAccountName" . }}
+      serviceAccountName: {{ include "docspace.serviceAccountName" . }}
       {{- if .Values.podSecurityContext.enabled }}
       securityContext: {{- omit .Values.podSecurityContext "enabled" | toYaml | nindent 8 }}
       {{- end }}
@@ -100,9 +100,9 @@ spec:
         resources: {{- toYaml .Values.proxy.resources | nindent 10 }}
         envFrom:
         - configMapRef:
-            name: app-all
+            name: docspace
         - configMapRef:
-            name: app-proxy
+            name: docspace-proxy
         - secretRef:
             name: {{ template "docspace.coreMachineKey.secretName" . }}
         volumeMounts:
@@ -161,4 +161,4 @@ spec:
       {{- end }}
       - name: proxy-log
         persistentVolumeClaim:
-          claimName: {{ template "app.pvc.proxy.name" . }}
+          claimName: {{ template "docspace.pvc.proxy.name" . }}
