--- a/templates/ingresses/docspace.yaml
+++ b/templates/ingresses/docspace.yaml
@@ -3,10 +3,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: docspace
-  namespace: {{ include "app.namespace" . | quote }}
+  namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
   {{- if .Values.ingress.annotations }}
   annotations:
@@ -36,7 +36,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: {{ template "app.svc.proxy.name" . }}
+            name: {{ template "docspace.svc.proxy.name" . }}
             port:
               number: {{ .Values.proxy.service.port.external }}
 {{- end }}
