--- a/templates/serviceaccounts/docspace.yaml
+++ b/templates/serviceaccounts/docspace.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "app.serviceAccountName" . }}
-  namespace: {{ include "app.namespace" . | quote }}
+  name: {{ include "docspace.serviceAccountName" . }}
+  namespace: {{ include "docspace.namespace" . | quote }}
   {{- if .Values.commonLabels }}
   labels:
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
   {{- end }}
   annotations:
     "helm.sh/hook": pre-install
