--- a/templates/services/studio.yaml
+++ b/templates/services/studio.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: studio
-  namespace: {{ include "app.namespace" . | quote }}
+  namespace: {{ include "docspace.namespace" . | quote }}
   labels:
     app: studio
     {{- if .Values.commonLabels }}
-    {{- include "app.labels.commonLabels" . | trim | nindent 4 }}
+    {{- include "docspace.labels.commonLabels" . | trim | nindent 4 }}
     {{- end }}
 spec:
   ports:
