Fix the password display in plain text

--- a/templates/deployments/files.yaml
+++ b/templates/deployments/files.yaml
@@ -123,7 +123,10 @@ spec:
               name: {{ template "docspace.redis.secretName" . }}
               key: {{ .Values.connections.redisSecretKeyName }}
         - name: RABBIT_URI
-          value: {{ include "docspace.broker.uri" . | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Release.Name }}-broker-uri
+              key: broker_uri
         - name: DOCUMENT_SERVER_JWT_ENABLED
           valueFrom:
             secretKeyRef:
