--- a/templates/statefulset/api.yaml
+++ b/templates/statefulset/api.yaml
@@ -105,7 +105,10 @@ spec:
               name: {{ template "docspace.redis.secretName" . }}
               key: {{ .Values.connections.redisSecretKeyName }}
         - name: RABBIT_URI
-          value: {{ include "docspace.broker.uri" . | quote }}
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Release.Name }}-broker-uri
+              key: broker_uri
         - name: DOCUMENT_SERVER_JWT_ENABLED
           valueFrom:
             secretKeyRef:
@@ -124,7 +127,7 @@ spec:
         envFrom:
         - configMapRef:
             name: docspace
-        - secretRef: 
+        - secretRef:
             name: {{ template "docspace.coreMachineKey.secretName" . }}
         - secretRef:
             name: {{ template "docspace.jwt.secretName" . }}
