--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: docspace
-description: Helm chart for installing DocSpace in Kubernetes
+description: Helm chart for installing ONLYOFFICE DocSpace in Kubernetes
 type: application
-version: 1.0.0
-appVersion: 1.1.0
+version: 1.1.0
+appVersion: 1.1.1
